--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "cookie-parser": "^1.4.6",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "express-session": "^1.17.3",
     "fs": "^0.0.1-security",
     "http": "^0.0.1-security",
     "jade": "^1.11.0"
